@@ -32,7 +32,7 @@ import org.apache.commons.logging.*;
  * @deprecated replaced by Text
  */
 public class UTF8 implements WritableComparable {
-  private static final Log LOG= LogFactory.getLog("org.apache.hadoop.io.UTF8");
+  private static final Log LOG= LogFactory.getLog(UTF8.class);
   private static final DataOutputBuffer OBUF = new DataOutputBuffer();
   private static final DataInputBuffer IBUF = new DataInputBuffer();
 
