@@ -62,7 +62,7 @@ import org.apache.hadoop.metrics.util.MetricsTimeVaryingRate;
  */
 public class RPC {
   private static final Log LOG =
-    LogFactory.getLog("org.apache.hadoop.ipc.RPC");
+    LogFactory.getLog(RPC.class);
 
   private RPC() {}                                  // no public ctor
 
